# Lightdance_Library

./: .README.md.swp  .gitignore  README.md
AllTest-PCA/: CMakeLists.txt  README.md
AllTest-PCA/include/: Config.h  LEDController.h  OFController.h
AllTest-PCA/src/: AllMain.cpp  LEDController.cpp  OFController.cpp
AllTest-TLC/: CMakeLists.txt
AllTest-TLC/include/: Config.h
AllTest-TLC/src/: AllMain.cpp  LEDController.cpp  OFController.cpp
Lightdance-PCA/: CMakeLists.txt  out  tree.txt
Lightdance-PCA/inc/: LEDController.h
Lightdance-PCA/include/: Config.h  LEDController.h  OFController.h
Lightdance-PCA/src/: AllMain.cpp  LEDController.cpp  OFController.cpp
Lightdance-TLC/: ALLMain  AllMain  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Lightdance-TLC/include/: LEDController.h  OFController.h
Lightdance-TLC/src/: AllMain.cpp  OFController.cpp
